<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:padding="@dimen/padding_5dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_replace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/banner_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:src="@drawable/ic_banner_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/favoriteListBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_favorite_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:scrollbarThumbHorizontal="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_logo">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin"
            app:chipSpacing="8dp"
            app:singleLine="true"
            app:singleSelection="true">

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?android:actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/toprated_title_layout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/text_margin"
                    android:text="@string/toprated"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/toprated_movie_showall_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/padding_5dp"
                    android:gravity="end">

                    <TextView
                        style="@style/TextAppearance.Material3.LabelSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/padding_5dp"
                        android:text="@string/showall" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_3dp"
                        android:contentDescription="@string/showall"
                        android:src="@drawable/ic_viewall" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toprated_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_margin="@dimen/text_margin"
                android:padding="@dimen/padding_5dp"
                app:layout_constraintStart_toStartOf="@+id/toprated_title_layout"
                app:layout_constraintTop_toBottomOf="@+id/toprated_title_layout" />

            <LinearLayout
                android:id="@+id/popular_title_layout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toprated_recyclerview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/text_margin"
                    android:text="@string/popular"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/popular_movie_showall_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/padding_5dp"
                    android:gravity="end">

                    <TextView
                        style="@style/TextAppearance.Material3.LabelSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/padding_5dp"
                        android:text="@string/showall" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_3dp"
                        android:contentDescription="@string/showall"
                        android:src="@drawable/ic_viewall" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularmovie_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_margin="@dimen/text_margin"
                android:padding="@dimen/padding_5dp"
                app:layout_constraintStart_toStartOf="@+id/popular_title_layout"
                app:layout_constraintTop_toBottomOf="@+id/popular_title_layout" />

            <LinearLayout
                android:id="@+id/upcoming_title_layout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularmovie_recyclerview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/text_margin"
                    android:text="@string/upcoming"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/upcoming_movie_showall_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/padding_5dp"
                    android:gravity="end">

                    <TextView
                        style="@style/TextAppearance.Material3.LabelSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="@dimen/padding_5dp"
                        android:text="@string/showall" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_3dp"
                        android:contentDescription="@string/showall"
                        android:src="@drawable/ic_viewall" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingmovie_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_margin="@dimen/text_margin"
                android:padding="@dimen/padding_5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/upcoming_title_layout"
                app:layout_constraintTop_toBottomOf="@+id/upcoming_title_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>